--- a/contactus.html
+++ b/contactus.html
@@ -251,9 +251,9 @@
                     <div class="col-md-4 col-sm-12 map-img">
                         <h2>Contact Us</h2>
                         <address class="md-margin-bottom-40">
-                            BlueDart Hosting <br>
-                            765th Boulevard, <br>
-                            Rochester, CA <br>
+                            Aashirwad Building <br>
+                            Kidangannoor <br>
+                            Kerala - 689514 <br>
                             Phone: +1 831 143 556 <br>
                             Email: <a href="mailto:info@bluedart.com" class="">info@bluedart.in</a><br>
                             Web: <a href="https://smarteyeapps.com/" class="">www.bluedart.in</a>
