--- a/contactus.html
+++ b/contactus.html
@@ -98,14 +98,14 @@
                             <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
                             <div class="text-start">
                                 <h5 class="mb-0">Our Clinic</h5>
-                                <span>123 Street, New York, USA</span>
+                                <span>Aashirwad building, Kidangannoor</span>
                             </div>
                         </div>
                         <div class="d-flex align-items-center mb-2">
                             <i class="bi bi-envelope-open fs-1 text-primary me-3"></i>
                             <div class="text-start">
                                 <h5 class="mb-0">Email Us</h5>
-                                <span><p><a href="mailto:contact@editsquad.co.in">contact@editsquad.co.in</a></p></span>
+                                <span><p><a href="mailto:askus@toothcare.org.in">askus@toothcare.org.in</a></p></span>
                             </div>
                         </div>
                         <div class="d-flex align-items-center">
@@ -254,9 +254,6 @@
                             Aashirwad Building <br>
                             Kidangannoor <br>
                             Kerala - 689514 <br>
-                            Phone: +1 831 143 556 <br>
-                            Email: <a href="mailto:info@bluedart.com" class="">info@bluedart.in</a><br>
-                            Web: <a href="https://smarteyeapps.com/" class="">www.bluedart.in</a>
                         </address>
                     </div>
                 </div>
