--- a/contactus.html
+++ b/contactus.html
@@ -50,7 +50,7 @@
                        <div id="navbarNavDropdown" class="col-md-9 d-none d-md-block navcol">
                            <ul>
                                <li><a href="index.html">Home</a></li>
-                               <li><a href="aboutus.html">Our Team</a></li>
+                               <li><a href="team.html">Our Team</a></li>
                                <li><a href="service.html">Service</a></li>
                                <li><a href="contactus.html">Contact Us</a></li>
                            </ul>
