--- a/contactus.html
+++ b/contactus.html
@@ -112,7 +112,7 @@
                             <i class="bi bi-phone-vibrate fs-1 text-primary me-3"></i>
                             <div class="text-start">
                                 <h5 class="mb-0">Call Us</h5>
-                                <span>+91 81290 61949</span>
+                                <span>+91 88910 90281</span>
                             </div>
                         </div>
                     </div>
@@ -126,7 +126,7 @@
           <br>
           </div>
                           <div style="text-align: center; margin-top: 20px;">
-                            <a href="https://wa.me/+919995400166?text=I%27m%20interested%20in%20working%20with%20you%20" style="display: inline-block;">
+                            <a href="https://wa.me/+918891090281?text=I%27m%20need%20an%20appointment%20" style="display: inline-block;">
                               <img src="assets/images/icon/whatsapp.gif" alt="Contact Us through WhatsApp" style="width: 200px; height: auto; border-radius: 10px;">
                             </a>
                             <p><b>Book your appointments through<br>WhatsApp</b></p>
