--- a/contactus.html
+++ b/contactus.html
@@ -126,7 +126,7 @@
           <br>
           </div>
                           <div style="text-align: center; margin-top: 20px;">
-                            <a href="https://wa.me/+918891090281?text=I%%20need%20an%20appointment%20" style="display: inline-block;">
+                            <a href="https://wa.me/+918891090281?text=I%20need%20an%20appointment%20" style="display: inline-block;">
                               <img src="assets/images/icon/whatsapp.gif" alt="Contact Us through WhatsApp" style="width: 200px; height: auto; border-radius: 10px;">
                             </a>
                             <p><b>Book your appointments through<br>WhatsApp</b></p>
