--- a/contactus.html
+++ b/contactus.html
@@ -98,7 +98,7 @@
                             <i class="bi bi-geo-alt fs-1 text-primary me-3"></i>
                             <div class="text-start">
                                 <h5 class="mb-0">Our Clinic</h5>
-                                <span>Aashirwad building, Kidangannoor</span>
+                                <span><a href="https://maps.app.goo.gl/6f1oeEsFV9Es2nVR9">Aashirwad building, Kidangannoor</a></span>
                             </div>
                         </div>
                         <div class="d-flex align-items-center mb-2">
