--- a/team.html
+++ b/team.html
@@ -110,7 +110,7 @@
                     <div class="single-usr">
                         <img src="assets/images/team/d2.jpg" alt="">
                         <div class="det-o">
-                            <h4>Dr. Reeba Mariam Geevarghese</h4>
+                            <h4>Dr. Reeba Mariam </h4>
                             <i>Dental Surgeon</i>
                         </div>
                     </div>
