--- a/team.html
+++ b/team.html
@@ -254,11 +254,8 @@
                 <a href="http://editsquad.co.in">2019 &copy; All Rights Reserved | Designed and Developed by EditSquad</a>
 
                 <span>
-                  <!--  <a><i class="fab fa-github"></i></a>
-                    <a><i class="fab fa-google-plus-g"></i></a>
-                    <a><i class="fab fa-pinterest-p"></i></a>
-                    <a><i class="fab fa-twitter"></i></a>
-                    <a><i class="fab fa-facebook-f"></i></a>-->
+                    <a href="https://www.facebook.com/toothcarekidangannoor"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/toothcarekidangannoor/"><i class="fab fa-instagram"></i></a>
                 </span>
             </div>
         </div>
