--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                    <!--<p>At Tooth Care, we believe in creating beautiful smiles through a combination of expertise and genuine compassion. Our experienced team offers a comprehensive range of dental services, from routine check-ups to advanced treatments, all in a warm and inviting atmosphere. Trust Tooth Care for your dental needs, and let us embark on a journey to optimal oral health together.</p>-->
                </div>
                <div class="col-md-6 right-col">
-                   <img src="assets/images/dental-cleaning-980x654.jpeg" alt="">
+                   <img src="assets/images/dental-cleaning-980x654.jpg" alt="">
                </div>
            </div>
        </div>
