--- a/contactus.html
+++ b/contactus.html
@@ -51,7 +51,7 @@
                            <ul>
                                <li><a href="index.html">Home</a></li>
                                <li><a href="team.html">Our Team</a></li>
-                               <li><a href="service.html">Service</a></li>
+                               <!--<li><a href="service.html">Service</a></li>-->
                                <li><a href="contactus.html">Contact Us</a></li>
                            </ul>
                        </div>
